--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "inline"
     ],
     "website": "https://github.com/MrMKN/PROFESSOR-BOT",
-    "repository": "https://github.com/MrMKN/PROFESSOR-BOT",
+    "repository": "https://github.com/Apputhan/PROFESSOR-BOT",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
